--- a/做题记录/随机100题/index.html
+++ b/做题记录/随机100题/index.html
@@ -537,7 +537,7 @@
       <div class="site-state-item site-state-posts">
           <a href="/archives/">
         
-          <span class="site-state-item-count">6</span>
+          <span class="site-state-item-count">7</span>
           <span class="site-state-item-name">日志</span>
         </a>
       </div>
@@ -590,6 +590,9 @@
         </li>
         <li class="links-of-blogroll-item">
           <a href="https://luckyleaves.github.io/" title="https:&#x2F;&#x2F;luckyleaves.github.io&#x2F;" rel="noopener" target="_blank">lucky叶</a>
+        </li>
+        <li class="links-of-blogroll-item">
+          <a href="https://www.pigaunt.top/" title="https:&#x2F;&#x2F;www.pigaunt.top&#x2F;" rel="noopener" target="_blank">PigAunt</a>
         </li>
     </ul>
   </div>
